test/sematic/resources/negative/false_loop3.tig
let
    var a :int := for i := 1 to 5 do i
in
    a
end